@@ -1,1 +1,5 @@
-{}
+{
+"name" : "Example Plugin",
+"version" : "0.1.0",
+"dependencies" : []
+}
